Bug 507842 - plasma-login-wallpaper doesn't work with master libplasma
Summary: plasma-login-wallpaper doesn't work with master libplasma
Status: RESOLVED FIXED
Alias: None
Product: plasma-login-manager
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: VHI normal
Target Milestone: ---
Assignee: Oliver Beard
URL:
Keywords:
: 509144 511062 (view as bug list)
Depends on:
Blocks:
 
Reported: 2025-08-04 08:23 UTC by daron439
Modified: 2025-10-25 07:16 UTC (History)
10 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description daron439 2025-08-04 08:23:48 UTC
SUMMARY
plasma-login-wallpaper shows only a black screen when used with current master branch of libplasma. Probably caused by https://invent.kde.org/plasma/libplasma/-/commit/c7e0ba9bb929c0bc6817cc676235d036f5ac04da

QFSFileEngine::open: No file name specified
file:///usr/share/plasma/wallpapers/org.kde.image/contents/ui/main.qml:52: TypeError: Value is null and could not be converted to an object
file:///usr/share/plasma/wallpapers/org.kde.image/contents/ui/main.qml:62: TypeError: Cannot read property Blur of null
file:///usr/share/plasma/wallpapers/org.kde.image/contents/ui/main.qml:61: TypeError: Cannot read property Color of null
file:///usr/share/plasma/wallpapers/org.kde.image/contents/ui/main.qml:60: TypeError: Cannot read property FillMode of null
file:///usr/share/plasma/wallpapers/org.kde.image/contents/ui/main.qml:88: TypeError: Cannot read property UncheckedSlides of null
file:///usr/share/plasma/wallpapers/org.kde.image/contents/ui/main.qml:87: TypeError: Cannot read property SlideshowFoldersFirst of null
file:///usr/share/plasma/wallpapers/org.kde.image/contents/ui/main.qml:86: TypeError: Cannot read property SlideshowMode of null
file:///usr/share/plasma/wallpapers/org.kde.image/contents/ui/main.qml:85: TypeError: Cannot read property SlideInterval of null
file:///usr/share/plasma/wallpapers/org.kde.image/contents/ui/main.qml:84: TypeError: Cannot read property SlidePaths of null
file:///usr/share/plasma/wallpapers/org.kde.image/contents/ui/main.qml:67: TypeError: Cannot read property PreviewImage of null

STEPS TO REPRODUCE
1. Build plasma-login with master libplasma

OBSERVED RESULT
Only a black screen is displayed instead of the expected wallpaper.

EXPECTED RESULT
The wallpaper should render properly on the login screen.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Jin Liu 2025-10-09 10:26:41 UTC
*** Bug 509144 has been marked as a duplicate of this bug. ***
Comment 2 Bug Janitor Service 2025-10-20 12:25:57 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-login-manager/-/merge_requests/26
Comment 3 Victor Ryzhykh 2025-10-20 13:58:45 UTC
(In reply to Bug Janitor Service from comment #2)
> A possibly relevant merge request was started @
> https://invent.kde.org/plasma/plasma-login-manager/-/merge_requests/26

I created a package with this patch and the master branch with the latest changes.
Everything works great.
Thanks.
Comment 4 David Edmundson 2025-10-24 23:23:24 UTC
Git commit d232ba79544b5f938aa3ae20d6621328ee1b5098 by David Edmundson, on behalf of Oliver Beard.
Committed on 24/10/2025 at 10:45.
Pushed by davidedmundson into branch 'master'.

frontend/wallpaper: Adapt to WallpaperItem config changes

This commit fixes the wallpaper by adapting to changes in how the wallpaper loads configuration in libplasma@c7e0ba9b.

M  +29   -16   src/frontend/wallpaper/wallpaperapp.cpp
M  +0    -2    src/frontend/wallpaper/wallpaperapp.h

https://invent.kde.org/plasma/plasma-login-manager/-/commit/d232ba79544b5f938aa3ae20d6621328ee1b5098
Comment 5 Antonio Rojas 2025-10-25 07:16:50 UTC
*** Bug 511062 has been marked as a duplicate of this bug. ***