frontend/wallpaper: Adapt to WallpaperItem config changes

This commit fixes the wallpaper by adapting to changes in how the wallpaper loads configuration in libplasma@c7e0ba9b.

BUG: 507842